// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultdb.internal.tasks;

import "go.chromium.org/luci/resultdb/proto/v1/invocation.proto";
import "go.chromium.org/luci/resultdb/proto/v1/notification.proto";

option go_package = "go.chromium.org/luci/resultdb/internal/tasks/taskspb";

message TryFinalizeInvocation {
  string invocation_id = 1;
}

message NotifyInvocationFinalized {
  // The message to publish to Cloud Pub/Sub.
  luci.resultdb.v1.InvocationFinalizedNotification message = 1;
}

message ExportInvocationTestResultsToBQ {
  string invocation_id = 1;
  luci.resultdb.v1.BigQueryExport bq_export = 2;
}

message ExportInvocationArtifactsToBQ {
  string invocation_id = 1;
  luci.resultdb.v1.BigQueryExport bq_export = 2;
}

message UpdateTestMetadata {
  string invocation_id = 1;
}

message MarkInvocationSubmitted {
  string invocation_id = 1;
}

message ExportArtifacts {
  string invocation_id = 1;
}
